fix button styling on mobile layouts

--- a/website/style/style.css
+++ b/website/style/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 #logo-compart-outer {
-	background-image: url(../images/logo_compart_outer.svg);
+	background-image: url(../images/logo_compart_outer.svg?v=1);
 }
 
 #logo-compart-middle {
@@ -124,6 +124,9 @@ body {
 	margin-top: 30px;
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	flex-wrap: wrap;
 }
 
 #intro-right a {
@@ -132,7 +135,6 @@ body {
 	background-color: var(--color-background-button);
 	background-size: 20px;
 	padding: 10px 20px 10px 40px;
-	margin: 0 10px;
 	box-shadow: 0 0 20px black;
 	color: var(--color-font-link);
 }
